--- a/config/webpacker.yml
+++ b/config/webpacker.yml
@@ -9,6 +9,11 @@ default: &default
   check_yarn_integrity: false
   webpack_compile_output: true
 
+  # =========================================
+  # ajouter selon la config du tutoriel
+  service_workers_entry_path: service_workers
+  # =========================================
+
   # Additional paths webpack should lookup modules
   # ['app/assets', 'engine/foo/app/assets']
   resolved_paths: []
