--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "mapbox-gl": "^1.12.0",
     "places.js": "^1.19.0",
     "popper.js": "^1.16.1",
-    "turbolinks": "^5.2.0"
+    "turbolinks": "^5.2.0",
+    "webpacker-pwa": "^0.1.2"
   },
   "version": "0.1.0",
   "devDependencies": {
