--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,22 +1,22 @@
 {
-    "short_name": "PWA",
-    "name": "Progressive Web App",
+    "short_name": "Urgences Enfant",
+    "name": "Urgences Enfant",
     "icons": [
       {
-        "src": "/icons/android-chrome-192x192.png",
+        "src": "/icons/UE-192x192.png",
         "sizes": "192x192",
         "type": "image/png"
       },
       {
-        "src": "/icons/android-chrome-512x512.png",
-        "sizes": "512x512",
+        "src": "/icons/UE-310x310.png",
+        "sizes": "310x310",
         "type": "image/png"
       }
     ],
     "start_url": "/",
-    "background_color": "#3367D6",
+    "background_color": "#66BBEC",
     "display": "standalone",
     "scope": "/",
-    "theme_color": "#3367D6"
+    "theme_color": "#66BBEC"
   }
   
